radware/mallikarjun/2day/ingress-controller/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /


spec:
  ingressClassName: nginx
  rules:
  - host: bear.52.210.194.95.nip.io
    http:
      paths:
      - path: /bear(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moose
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /


spec:
  ingressClassName: nginx
  rules:
  - host: moose.52.210.194.95.nip.io
    http:
      paths:
      - path: /moose(/|$)(.*)
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
